--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@ img {
 }
 
 button {
-  width: 100px;
-  height: 60px;
+  width: calc(90px + 2vmin);
+  height: calc(45px + 2vmin);
   font-family: 'Poppins', sans-serif;
   color: #000;
   background-color: #fff;
@@ -34,7 +34,7 @@ button {
   margin: 0;
   border: none;
   border-radius: 50px;
-  font-size: smaller;
+  font-size: calc(5px + 1vmin);
 }
 
 button:hover {
@@ -54,9 +54,7 @@ button:hover {
 
 #top {
   margin-top: 4em;
-  width: 350px;
   align-items: center;
-  margin: auto;
 }
 
 .Presently-logo a:link {
@@ -131,7 +129,7 @@ a:hover {
 
 #questionsContainer {
   /*display: inline-flex;*/
-  width: 400px;
+  width: 350px;
   justify-content: center;
   margin: auto;
 }
